codepkg/objects/Program__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <description>The Program&apos;s details</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Program&apos;s details</inlineHelpText>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Federal_Cost_Share__c</fullName>
        <description>The Federal Cost Share Requirement for this Program. Pre populate with the standard 75%</description>
        <inlineHelpText>The Federal Cost Share Requirement for this Program</inlineHelpText>
        <label>Federal Cost Share %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Funder_Type__c</fullName>
        <description>What is the source of funding for this program?</description>
        <inlineHelpText>What is the source of funding for this program?</inlineHelpText>
        <label>Funder Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_Label_Program_Name__c</fullName>
        <description>Internal</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This Field is Used in Custom Implementation and must not be changed without informing the Administrator.</inlineHelpText>
        <label>Program Name(Master Label)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Parent Program</description>
        <inlineHelpText>If the Program you are adding is not one of the Programs in this list, please select the parent Program from this list.</inlineHelpText>
        <label>Parent Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Related Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>The Stage of this program in its lifecycle</description>
        <inlineHelpText>What is the Stage is this Program?</inlineHelpText>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Cost_Share__c</fullName>
        <description>The State Cost Share Requirement for this Program. Pre Populate with the standard 0%</description>
        <inlineHelpText>The State Cost Share Requirement for this Program</inlineHelpText>
        <label>State Cost Share %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_Program__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Federal_Cost_Share__c</columns>
        <columns>State_Cost_Share__c</columns>
        <columns>Funder_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Parent_Program_List_View</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Stage__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Parent_Program__c</field>
            <operation>equals</operation>
        </filters>
        <label>Parent Program List View</label>
    </listViews>
    <listViews>
        <fullName>Programs_Sub_Program</fullName>
        <columns>NAME</columns>
        <columns>Parent_Program__c</columns>
        <columns>Federal_Cost_Share__c</columns>
        <columns>State_Cost_Share__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Parent_Program__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Programs - Sub Program</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>